translation-tool/inputs/source_meta/objects/YAHS_BroadcastMessage__c.object
<CustomObject>
    <fields>
        <fullName>Activation_Date_Time__c</fullName>
        <description>This field will store activation date/ time</description>
        <label>Activation Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Announcement is active as long as active flag is enabled</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Announcement_Type__c</fullName>
        <description>Stores which type of announcement going to create</description>
        <label>Announcement Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Service Impact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>Announcement_esAR__c</fullName>
        <label>Announcement(Argentina)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Announcement_esCL__c</fullName>
        <label>Announcement(Chile)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Announcement_esCO__c</fullName>
        <description>To hold Announcement in Spanish for Colombia country</description>
        <label>Announcement(Colombia)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Announcement_esEC__c</fullName>
        <label>Announcement(Ecuador)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Announcement_esPE__c</fullName>
        <label>Announcement(Peru)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Announcement_in_Panama__c</fullName>
        <label>Announcement(Panama)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>BeamId__c</fullName>
        <label>BeamId</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Gateway__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>38</fullName>
                </value>
                <value>
                    <fullName>47</fullName>
                </value>
                <value>
                    <fullName>115</fullName>
                </value>
                <value>
                    <fullName>121</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Broadcast_Message__c</fullName>
        <label>Announcement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Carrier_Id__c</fullName>
        <label>Carrier Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_Profile__c</fullName>
        <formula>CASE(CreatedBy.Profile.Name, &apos;Var Partner Admin&apos;, &apos;Tier-1&apos;,
&apos;INT CSM&apos;, &apos;Tier-2&apos;,
&apos;INT CSR&apos;, &apos;Tier-2&apos;,&apos;No Tier&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy Profile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Active__c</fullName>
        <formula>If( OR(AND(Effective_Date__c &lt;=  NOW(), Expiry_Date__c &gt;= NOW()),
AND(Effective_Date__c &lt;=  NOW(), ISNULL(Expiry_Date__c))),&apos;YES&apos;,&apos;NO&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Active</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Effective_Date_in_UTC__c</fullName>
        <formula>TEXT(MONTH(DATEVALUE(Effective_Date__c)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Effective_Date__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Effective_Date__c))) &amp; &quot; &quot; &amp; 
CASE( 
MID(TEXT(Effective_Date__c), 12, 2), 
&quot;01&quot;,&quot;1&quot;,&quot;02&quot;,&quot;2&quot;,&quot;03&quot;,&quot;3&quot;,&quot;04&quot;,&quot;4&quot;,&quot;05&quot;,&quot;5&quot;,&quot;06&quot;,&quot;6&quot;,&quot;07&quot;,&quot;7&quot;,&quot;08&quot;,&quot;8&quot;,&quot;09&quot;,&quot;9&quot;,&quot;10&quot;,&quot;10&quot;, 
&quot;11&quot;,&quot;11&quot;,&quot;12&quot;,&quot;12&quot;, 
&quot;13&quot;, &quot;1&quot;, 
&quot;14&quot;, &quot;2&quot;, 
&quot;15&quot;, &quot;3&quot;, 
&quot;16&quot;, &quot;4&quot;, 
&quot;17&quot;, &quot;5&quot;, 
&quot;18&quot;, &quot;6&quot;, 
&quot;19&quot;, &quot;7&quot;, 
&quot;20&quot;, &quot;8&quot;, 
&quot;21&quot;, &quot;9&quot;, 
&quot;22&quot;, &quot;10&quot;, 
&quot;23&quot;,&quot;11&quot;, 
&quot;0&quot; 
) 
&amp; &quot;:&quot; &amp; 
MID(TEXT(Effective_Date__c), 15, 2) &amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( Effective_Date__c), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date in UTC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiry_Date_in_UTC__c</fullName>
        <formula>IF(ISBLANK(Expiry_Date__c),&apos;&apos;,TEXT(MONTH(DATEVALUE(Expiry_Date__c)))+&quot;/&quot; +TEXT(DAY(DATEVALUE(Expiry_Date__c)))+&quot;/&quot; +TEXT(YEAR(DATEVALUE(Expiry_Date__c))) &amp; &quot; &quot; &amp; 
CASE( 
MID(TEXT(Expiry_Date__c), 12, 2), 
&quot;01&quot;,&quot;1&quot;,&quot;02&quot;,&quot;2&quot;,&quot;03&quot;,&quot;3&quot;,&quot;04&quot;,&quot;4&quot;,&quot;05&quot;,&quot;5&quot;,&quot;06&quot;,&quot;6&quot;,&quot;07&quot;,&quot;7&quot;,&quot;08&quot;,&quot;8&quot;,&quot;09&quot;,&quot;9&quot;,&quot;10&quot;,&quot;10&quot;, 
&quot;11&quot;,&quot;11&quot;,&quot;12&quot;,&quot;12&quot;, 
&quot;13&quot;, &quot;1&quot;, 
&quot;14&quot;, &quot;2&quot;, 
&quot;15&quot;, &quot;3&quot;, 
&quot;16&quot;, &quot;4&quot;, 
&quot;17&quot;, &quot;5&quot;, 
&quot;18&quot;, &quot;6&quot;, 
&quot;19&quot;, &quot;7&quot;, 
&quot;20&quot;, &quot;8&quot;, 
&quot;21&quot;, &quot;9&quot;, 
&quot;22&quot;, &quot;10&quot;, 
&quot;23&quot;,&quot;11&quot;, 
&quot;0&quot; 
) 
&amp; &quot;:&quot; &amp; 
MID(TEXT(Expiry_Date__c), 15, 2) &amp; &quot; &quot; &amp; 
IF( 
VALUE( MID( TEXT( Expiry_Date__c), 12, 2 ) ) &lt; 12, 
&quot;AM&quot;, 
&quot;PM&quot; 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiry Date in UTC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gateway_Location__c</fullName>
        <label>Gateway Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Roseburg</fullName>
                </value>
                <value>
                    <fullName>Billings</fullName>
                </value>
                <value>
                    <fullName>Albuquerque</fullName>
                </value>
                <value>
                    <fullName>Santa Clara</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gateway__c</fullName>
        <label>Gateway</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Gateway_Location__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ROS</fullName>
                </value>
                <value>
                    <fullName>BIL</fullName>
                </value>
                <value>
                    <fullName>ALB</fullName>
                </value>
                <value>
                    <fullName>STC</fullName>
                </value>
                <value>
                    <fullName>SEA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Audience__c</fullName>
        <description>To whom the announcements should be displayed</description>
        <label>Intended Audience</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Display to SP and Customer</fullName>
                </value>
                <value>
                    <fullName>Display to SP Only</fullName>
                </value>
                <value>
                    <fullName>SP ONLY</fullName>
                </value>
                <value>
                    <fullName>Display to Customer of SP/Distributor Only</fullName>
                    <isActive>false</isActive>
                    <label>Display to Customer of SP/Distributor Only</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Partner_Selection__c</fullName>
        <description>will store list of selected SP&apos;s</description>
        <label>Service Partner</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Announcement</label>
    <listViews>
        <fullName>Active_Announcements</fullName>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Announcement_Type__c</columns>
        <columns>Broadcast_Message__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_Profile__c</field>
            <operation>equals</operation>
            <value>Tier-2</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Date_Active__c</field>
            <operation>equals</operation>
            <value>YES</value>
        </filters>
        <label>Active Announcements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Announcements</fullName>
        <columns>NAME</columns>
        <columns>Announcement_Type__c</columns>
        <columns>Broadcast_Message__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_Profile__c</field>
            <operation>equals</operation>
            <value>Tier-2</value>
        </filters>
        <label>All Announcements</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Announcements_posted_by_SP</fullName>
        <columns>NAME</columns>
        <columns>Announcement_Type__c</columns>
        <columns>Service_Partner_Selection__c</columns>
        <columns>Broadcast_Message__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>Active__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_Profile__c</field>
            <operation>equals</operation>
            <value>Tier-1</value>
        </filters>
        <label>Announcements posted by SP</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Inactive_Announcements</fullName>
        <booleanFilter>1 AND ( 2 OR 3)</booleanFilter>
        <columns>NAME</columns>
        <columns>Announcement_Type__c</columns>
        <columns>Broadcast_Message__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Expiry_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CreatedBy_Profile__c</field>
            <operation>equals</operation>
            <value>Tier-2</value>
        </filters>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Date_Active__c</field>
            <operation>equals</operation>
            <value>NO</value>
        </filters>
        <label>Inactive Announcements</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Announcement ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Announcements</pluralLabel>
    <recordTypes>
        <fullName>General</fullName>
        <active>true</active>
        <description>This will create General Announcements</description>
        <label>General</label>
    </recordTypes>
    <recordTypes>
        <fullName>Service_Impact</fullName>
        <active>true</active>
        <description>This will create Service Impact Announcements</description>
        <label>Service Impact</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Broadcast_Message_Cannot_Be_Blank</fullName>
        <active>true</active>
        <description>Validation rule to ensure English or Spanish Panama or Spanish Colombia or Spanish Peru or Spanish Ecuador or Spanish Chile or Spanish Argentina version of message not left blank</description>
        <errorConditionFormula>AND( 
LEN(Announcement_in_Panama__c)  = 0,
LEN( Announcement_esCO__c)  = 0,
LEN( Announcement_esPE__c)  = 0,
LEN( Announcement_esCL__c)  = 0,
LEN( Announcement_esEC__c)  = 0,
        LEN(Announcement_esAR__c)=0
    
)</errorConditionFormula>
        <errorMessage>You must enter an Announcement message and its Spanish version</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ExpiryDateCannotBeSetupAsPastDate</fullName>
        <active>true</active>
        <description>This validation rule ensures that the expiry date is set in future and is greater that the effective date</description>
        <errorConditionFormula>OR(Expiry_Date__c &lt; NOW(),Expiry_Date__c &lt;Effective_Date__c)</errorConditionFormula>
        <errorDisplayField>Expiry_Date__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>